# infer

./: .gitignore  README.md
infer/src/: Makefile
infer/src/api-misuse/: domain.mli  dune  mapchecker.ml  mapchecker.mli  mapdomain.ml  mapdomain.mli  table.mli  util.ml
infer/src/backend/: Payloads.ml  Payloads.mli  dune  registerCheckers.ml
infer/src/base/: Checker.ml  Checker.mli  IssueType.ml  IssueType.mli
infer/src/bufferoverrun/: absLoc.ml  absLoc.mli  bufferOverrunAnalysis.ml  bufferOverrunDomain.mli  bufferOverrunModels.ml  bufferOverrunProofObligations.ml  bufferOverrunProofObligations.mli  bufferOverrunTrace.ml  bufferOverrunTrace.mli  bufferOverrunUtils.ml  bufferOverrunUtils.mli  idxDom.ml  idxDom.mli  itv.ml  itv.mli  misuseMapChecker.ml  util.ml
infer/src/labs/: ResourceLeaks.ml
infer/src/mychecker/: Print.ml  Print.mli  PrintDomain.ml  PrintDomain.mli
