; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.


(library
 (name MisuseChecker)
 (public_name infer.MisuseChecker)
 (modules_without_implementation domain)
 (flags
  (:standard -open IR -open IStdlib -open IStd -open ATDGenerated
     -open IBase -open Absint))
 (libraries IStdlib ATDGenerated IBase IR Absint)
 (preprocess (pps ppx_compare))
)
